# MapleCompiler

./: .gitignore  CMakeLists.txt  README.md  main.cpp
back-end/src/ir/: BasicBlock.cpp  BasicBlock.h  BuildIR.h  CFG.cpp  CFG.h  GlobalDeclaration.cpp  GlobalDeclaration.h  IRInstr.cpp  IRInstr.h
back-end/src/ir/globals/: GlobalDeclarationTab.cpp  GlobalDeclarationTab.h  GlobalDeclarationVar.cpp  GlobalDeclarationVar.h
back-end/src/ir/instructions/: AddInstr.cpp  AddInstr.h  CallInstr.cpp  CallInstr.h  CmpEqInstr.cpp  CmpEqInstr.h  CmpLeInstr.cpp  CmpLeInstr.h  CmpLtInstr.cpp  CmpLtInstr.h  IncrInstr.cpp  IncrInstr.h  LDConstInstr.cpp  LDConstInstr.h  LoadConstInstr.cpp  LoadConstInstr.h  MulInstr.cpp  MulInstr.h  OpInstr.cpp  OpInstr.h  RMemArrayInstr.cpp  RMemArrayInstr.h  RMemInstr.cpp  RMemInstr.h  SubInstr.cpp  SubInstr.h  UnaryOpInstr.cpp  UnaryOpInstr.h  WMemArrayInstr.cpp  WMemArrayInstr.h  WMemInstr.cpp  WMemInstr.h
back-end/src/targets/: BaseTarget.cpp  BaseTarget.h  Target.h  X86_64.cpp  X86_64.h
back-end/src/tree-walk/: MapleTreeWalk.cpp  MapleTreeWalk.h
cli/: Config.h  Runner.cpp  Runner.h
cmake/: ExternalAntlr4Cpp.cmake
front-end/: MapleGrammar.g4  StartVisitor.cpp  StartVisitor.h
front-end/Array/: Tab.cpp  TabAccessor.h
front-end/Variable/: VarAccessor.cpp  VarAccessor.h  VarDeclaration.h
front-end/accessor/: Accessor.cpp  Accessor.h
front-end/declaration/: Declaration.h  DeclarationOfTab.cpp
front-end/expressions/: Expr.h  ExprAccessor.h  ExprAffectation.h  ExprMultiplicative.cpp  ExprMultiplicative.h  ExprParenthesis.h  ExprValue.cpp  ExprValue.h
front-end/expressions/Operation/: ExprAdditiveOperation.h  ExprAndOperation.h  ExprEqualityComparaisonOperation.h  ExprOrOperation.cpp  ExprOrOperation.h  ExprRelationalComparaisonOperation.h
front-end/expressions/Operation/Binary/: ExprBinaryShiftOperation.cpp
front-end/maple-parser/: MapleGrammarBaseVisitor.h  MapleGrammarLexer.cpp  MapleGrammarLexer.h  MapleGrammarParser.cpp  MapleGrammarParser.h  MapleGrammarVisitor.h
front-end/parser/: MapleGrammarBaseListener.cpp  MapleGrammarBaseListener.h  MapleGrammarBaseVisitor.cpp  MapleGrammarBaseVisitor.h  MapleGrammarLexer.cpp  MapleGrammarLexer.h  MapleGrammarLexer.tokens  MapleGrammarListener.cpp  MapleGrammarListener.h  MapleGrammarParser.cpp  MapleGrammarParser.h  MapleGrammarVisitor.cpp  MapleGrammarVisitor.h
front-end/src/: Declarations.h  StartVisitor.cpp  StartVisitor.h
front-end/src/Axiome/: Program.h  ProgramDeclaration.cpp  ProgramFunction.cpp  ProgramFunction.h  start.cpp  start.h
front-end/src/accessor/: Accessor.h  FunctionAccessor.cpp  FunctionAccessor.h  LeftValue.h  LeftValueAccessor.cpp  LeftValueAccessor.h  LeftValueTab.cpp  LeftValueTab.h  LeftValueVar.cpp  LeftValueVar.h
front-end/src/array/: ItemTab.cpp  ItemTab.h  Tab.h  TabAccessor.cpp  TabAccessor.h  TabDeclaration.cpp  TabDeclaration.h
front-end/src/axiom/: Start.cpp  Start.h
front-end/src/axiome/: ProgramDeclaration.h  Start.h
front-end/src/control-structure/: Block.cpp  Block.h  ElseStatement.cpp  ElseStatement.h  ForStatement.cpp  ForStatement.h  IfStatement.cpp  IfStatement.h  IfStatementInstruction.cpp  IfStatementInstruction.h  Instruction.h  ReturnStatement.cpp  ReturnStatement.h  Statement.cpp  Statement.h  StatementInstruction.cpp  StatementInstruction.h  WhileStatement.cpp  WhileStatement.h
front-end/src/declaration/: Declaration.h  DeclarationOfTab.h  DeclarationOfVar.cpp  DeclarationOfVar.h
front-end/src/expression/: Expr.cpp  Expr.h  ExprAccessor.cpp  ExprAccessor.h  ExprAffectation.cpp  ExprAffectation.h  ExprIncrement.cpp  ExprIncrement.h  ExprParenthesis.cpp  ExprParenthesis.h  ExprValue.cpp  ExprValue.h  Value.cpp  Value.h
front-end/src/expression/operation/: ExprAdditiveOperation.cpp  ExprAdditiveOperation.h  ExprAndOperation.cpp  ExprAndOperation.h  ExprCommaOperation.cpp  ExprCommaOperation.h  ExprEqualityComparisonOperation.cpp  (+8 more)
front-end/src/expressions/: ExprAccessor.cpp  ExprAffectation.h  ExprParenthesis.cpp  ExprValue.cpp  ExprValue.h  Value.cpp  Value.h
front-end/src/function/: AccessorFunction.cpp  AccessorFunction.h  BlockFunction.cpp  BlockFunction.h  FunctionDefinition.cpp  FunctionDefinition.h  FunctionParam.cpp  FunctionParam.h  FunctionParamTab.cpp  FunctionParamTab.h  FunctionParamVar.cpp  FunctionParamVar.h
front-end/src/maple-parser/: MapleGrammar.g4  MapleGrammar.tokens  MapleGrammarBaseVisitor.cpp  MapleGrammarBaseVisitor.h  MapleGrammarLexer.cpp  MapleGrammarLexer.h  MapleGrammarLexer.tokens  MapleGrammarParser.cpp  MapleGrammarParser.h  MapleGrammarVisitor.cpp  MapleGrammarVisitor.h
front-end/src/symbol-table/: Symbol.cpp  Symbol.h  SymbolTable.cpp  SymbolTable.h
front-end/src/symbole-table/: Symbole.cpp  Symbole.h  SymboleTable.cpp  SymboleTable.h
front-end/src/token/: Type.h
front-end/src/variable/: VarAccessor.cpp  VarAccessor.h  VarDeclaration.cpp  VarDeclaration.h
front-end/src/visitor/: StartVisitor.cpp  StartVisitor.h  VisitorAccessor.cpp  VisitorDeclaration.cpp  VisitorExpr.cpp  VisitorFunction.cpp  VisitorInstruction.cpp  VisitorOp.cpp
front-end/symbole-table/: Symbole.h  SymboleTable.h
tests/: FrontEndTestsScript.bash  FrontEndTestsScript.sh  runAll.sh  sample1.c  sample2.c  sample3.c  test.c
tests/Logs/: 01_LexError_InvalidCharInStream.c_Log.txt  01_MissingVarDeclaration.c_Log.txt  01_SyntaxError_TwoOperators.c_Log.txt  02_LexError_InvalidCharInStreamWithinProgram.c_Log.txt  02_SyntaxError_TwoOperands.c_Log.txt  03_SyntaxError_MissingSemicolon.c_Log.txt  04_SyntaxError_MissingPar.c_Log.txt  05_SyntaxError_TooManyClosingPar.c_Log.txt  36_OperatorComma.c_Log.txt  51_CharConstSpecial.c_Log.txt  53_FunctionCallPutChar.c_Log.txt  55_Return.c_Log.txt
tests/PresentationTests/: AckermannFunction.c  ErrorInParameters.c  FunctionDeclarationNeeded.c  SyracuseSequence.c  Test1.c  TestOperators.c  TestRecursivity.c  printIntegers.c  recursiveFact.c
utils/: filename.h  mapContext2Vector.h  parseConfig.h  printDebugInfo.cpp  printDebugInfo.h  str2int.h  typeHelper.cpp  typeHelper.h
(+36 files in other folders)
